--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -23,11 +23,8 @@ const imageUrl = new URL(image.src, siteOrigin).toString();
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=1" />
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=1" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=1" />
-<link rel="icon" type="image/png" href="/favicon.png?v=1" />
-<link rel="shortcut icon" href="/favicon.ico?v=1" />
+<link rel="icon" type="image/svg+xml" href="/cuny-seeklogo.svg" />
+<link rel="icon" type="image/png" href="/cuny-seeklogo.png" />
 <link rel="sitemap" href="/sitemap-index.xml" />
 <link
 	rel="alternate"
@@ -68,7 +65,6 @@ const imageUrl = new URL(image.src, siteOrigin).toString();
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:site" content="@guihubie" />
 <meta property="twitter:url" content={absoluteUrl} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
