--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -24,7 +24,7 @@ if (featured) {
 ---
 
 <!doctype html>
-<html lang="en" data-theme="dark" class="dark">
+<html lang="en" data-theme="light">
 	<head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
     {totalPages > 1 && (
