--- a/src/pages/demo.astro
+++ b/src/pages/demo.astro
@@ -39,7 +39,7 @@ const posts = await getCollection('blog');
 const [firstPost, secondPost, thirdPost] = posts.slice(0, 3);
 ---
 
-<html lang="en" data-theme="dark" class="dark">
+<html lang="en" data-theme="light">
   <head>
     <BaseHead title={pageTitle} description={pageDescription} />
   </head>
