--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -8,7 +8,7 @@ import GlowLineSeparator from "../components/ui/separator/GlowLineSeparator.astr
 ---
 
 
-<html lang="en" data-theme="dark" class="dark">
+<html lang="en" data-theme="light">
   <head>
     <BaseHead title="Portfolio" description="Selected projects and playbooks" />
   </head>
