--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,12 +33,12 @@ import figmaLogo from '../assets/logos/Figma-logo.svg';
     <script type="application/ld+json" set:html={JSON.stringify({
       '@context': 'https://schema.org',
       '@type': 'Organization',
-      name: 'RCC',
+      name: 'NYC-MEHSJ Research Capacity Core (RCC)',
       url: new URL('/', Astro.site).toString(),
   logo: new URL('/cuny-seeklogo.svg', Astro.site).toString(),
       sameAs: [
-        '/__broken/x',
-        '/__broken/linkedin',
+        'https://twitter.com/cunyrcc',
+        'https://linkedin.com/company/cuny-rcc',
       ],
     })} />
 	</head>
